--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/nav_map_view"
         android:icon="@drawable/ic_map"
-        android:title="Map View" />
+        android:title="@string/map_view" />
 
     <item
         android:id="@+id/nav_list_view"
         android:icon="@drawable/ic_list"
-        android:title="List View" />
+        android:title="@string/list_view" />
 
     <item
         android:id="@+id/nav_workmates"
         android:icon="@drawable/ic_group"
-        android:title="Workmates" />
+        android:title="@string/workmates" />
 
 </menu>
