--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/cardview_dark_background"
+    xmlns:tool="http://schemas.android.com/tools"
+    android:background="@color/gray2"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
@@ -13,7 +14,8 @@
         android:layout_height="48dp"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:contentDescription="@string/user_profile_picture" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:paddingTop="8dp"
-            android:text="John SMITH"
+            tool:text="@string/user_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -42,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="jsmith.1337@gmail.com"
+            tool:text="@string/user_email"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_constraintLeft_toRightOf="@id/nav_drawer_profile_picture"
             app:layout_constraintTop_toBottomOf="@+id/nav_drawer_name" />
